# emacs-subreddit

./: .gitignore  LICENSE.txt  Makefile  README.in.rst  README.rst  pylintrc  pyproject.toml
.github/workflows/: test.yml
lisp/: emacs-subreddit-package.el  emacs-subreddit.el
src/subreddit/: .dir-locals.el  __about__.py  __init__.py  __main__.py  authenticated_reddit.py
src/subreddit/jsonrpyc/: __init__.py
src/subreddit/rtv/: config.py
